fix redirect overlaps, edit js with approaching boolean instead over alternating at 1 min, and did comment controller update action

--- a/app/assets/stylesheets/accounts.scss
+++ b/app/assets/stylesheets/accounts.scss
@@ -11,9 +11,15 @@
 }
 
 .comment-text {
+  position: relative;
   font-size: 150%;
   margin: 10px 0;
 }
+// 
+// .comment-text > div {
+//   position: absolute;
+//   font-size: 50%;
+// }
 
 #username {
   font-size: 300%;
